[gd_scene load_steps=4 format=3 uid="uid://l6s7pnmj20xu"]

[ext_resource type="Theme" uid="uid://csyr5ylftdp4l" path="res://assets/new_theme.tres" id="1_g1tmv"]
[ext_resource type="Script" path="res://class_regions/enums/enums_region.gd" id="2_oppln"]
[ext_resource type="PackedScene" uid="uid://boyik7srki0ll" path="res://class_regions/class_region_header.tscn" id="3_nwjc7"]

[node name="EnumsRegion" type="PanelContainer" node_paths=PackedStringArray("header")]
offset_right = 256.0
offset_bottom = 198.0
theme = ExtResource("1_g1tmv")
script = ExtResource("2_oppln")
header = NodePath("MarginContainer/VBoxContainer/ClassRegionHeader")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ClassRegionHeader" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_nwjc7")]
layout_mode = 2
label_text = "Enums"

[node name="ItemsRoot" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddNewBtn" type="Button" parent="MarginContainer/VBoxContainer/ItemsRoot"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ItemsRoot/AddNewBtn" to="." method="_on_add_new"]
